<resources>
    <string name="app_name">HeartLink ( ͡° ͜ʖ ͡°)</string>
    <string name="button_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="error_password">Password must contain at least 6 characters</string>
    <string name="person_name">Name</string>
    <string name="person_age">Age</string>
    <string name="person_country">Country</string>
</resources>