<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFFFFF"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="10dp">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/person_image"
            android:layout_width="match_parent"
            android:layout_height="452dp"
            android:background="#2657FD"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="@string/person_name"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceSubtitle2"/>
            
            <TextView
                android:id="@+id/person_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:text="@string/person_age"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody2"/>

            <TextView
                android:id="@+id/person_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:text="@string/person_country"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/checked"
                    android:layout_margin="10dp"
                    android:layout_gravity="left"
                    />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/rejected"
                    android:layout_marginLeft="223dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    
</com.google.android.material.card.MaterialCardView>